@@ -64,17 +64,34 @@ def isSimpleTerm(term):
     return bool(simpleTerm.match(term.strip()))
 
 
-simpleSearch = compile(r'^(([*"]?[\w\d?]+[*"]?)\s*)+$', UNICODE)
 operators = compile(r'(.*)\s+(AND|OR|NOT)\s+', UNICODE)
+simpleCharacters = compile(r'^[\w\d\?\*\s]+$', UNICODE)
 def isSimpleSearch(term):
     term = term.strip()
     if isinstance(term, str):
         term = unicode(term, 'utf-8', 'ignore')
-    if bool(simpleSearch.match(term)):
-        ops = operators.match(term)
-        if ops:
-            prefix, op = ops.groups()
-            return bool(prefix.count('"') % 2)  # even number of quotes
+    if not term:
+        return False
+    num_quotes = term.count('"')
+    if num_quotes % 2 == 1:
+        return False
+    if num_quotes > 1:
+        # replace the quoted parts of the query with a marker
+        parts = term.split('"')
+        # take only the even parts (i.e. those outside the quotes)
+        new_parts = []
+        for i in range(0, len(parts)):
+            if i % 2 == 0:
+                new_parts.append(parts[i])
+            else:
+                new_parts.append('quoted')
+        term = u''.join(new_parts)
+    if bool(operators.match(term)):
+        return False
+    if bool(simpleCharacters.match(term)):
+        return True
+    term = term.strip()
+    if not term:
         return True
     return False
 
